# NLP_nexus_task_1

./: .gitignore  README.md  main.py  output.txt  pyproject.toml  requirements.txt
src/: click_comand.py  get_text.py  help_functions.py  log.py  save_result.py
