[tool.poetry]
name = "ocr_tesseract_iurina"
version = "0.1.0"
description = "simple OCR reader with TessaractOCR"
authors = ["Natalya Yurina <skarlett992@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "3.4.1"
click = "8.0.1"
Cycler = "0.10.0"
Django = "3.2.7"
importlib-metadata = "4.8.1"
joblib = "1.0.1"
nameparser = "1.0.6"
networkx = "2.6.3"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
pytz = "2021.1"
zipp = "3.5.0"
typing-extensions = "3.10.0.2"
tqdm = "4.62.2"
sqlparse = "0.4.2"
six = "1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
